Closed
Bug 397448
Opened 18 years ago
Closed 18 years ago
"ASSERTION: Doing nscoord addition with values > nscoord_MAX" with percentage margin in table cell
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: dholbert)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
114 bytes,
text/html
|
Details | |
|
1.15 KB,
patch
|
roc
:
review+
roc
:
superreview+
roc
:
approval1.9+
|
Details | Diff | Splinter Review |
Loading the testcase triggers two of the new assertions added in bug 367673:
###!!! ASSERTION: Doing nscoord addition with values > nscoord_MAX: 'a < nscoord_MAX && b < nscoord_MAX', file ../../dist/include/gfx/nsCoord.h, line 151
###!!! ASSERTION: nscoord addition will reach or pass nscoord_MAX: '(PRInt64)a + (PRInt64)b < (PRInt64)nscoord_MAX', file ../../dist/include/gfx/nsCoord.h, line 153
| Assignee | ||
Comment 1•18 years ago
|
||
trivial -- we just need one more call to NSCoordSaturatingAdd.
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #282274 -
Flags: superreview?(roc)
Attachment #282274 -
Flags: review?(roc)
Attachment #282274 -
Flags: approval1.9?
Attachment #282274 -
Flags: superreview?(roc)
Attachment #282274 -
Flags: superreview+
Attachment #282274 -
Flags: review?(roc)
Attachment #282274 -
Flags: review+
Attachment #282274 -
Flags: approval1.9?
Attachment #282274 -
Flags: approval1.9+
| Assignee | ||
Comment 2•18 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•