Bug 397448 - "ASSERTION: Doing nscoord addition with values > nscoord_MAX" with percentage margin in table cell.  r=roc sr=roc approval19=roc